--- a/contrib/redis.yaml
+++ b/contrib/redis.yaml
@@ -23,7 +23,7 @@ kind: Service
 metadata:
   name: redis-service
 spec:
-  type: ClusterIP
+  type: NodePort
   ports:
   - port: 6379
     targetPort: 6379
